<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/info_logo"
        android:layout_width="235dp"
        android:layout_height="182dp"
        android:src="@drawable/wizardbooklogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/info_logo"
        android:text="@string/disclaimer"/>

    <TextView
        android:id="@+id/thanksto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/disclaimer"
        android:text="@string/hyperlink_string"/>

    <TextView
        android:id="@+id/freepick_disclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/thanksto"
        android:text="@string/freepick_disclaimer"/>

    <TextView
        android:id="@+id/honorRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@+id/freepick_disclaimer"
        android:text="@string/request"/>

    <ImageButton
        android:id="@+id/kofi_button"
        android:layout_width="200dp"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:scaleType="fitStart"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ko_fi_logo_bluebg"
        app:layout_constraintTop_toBottomOf="@+id/honorRequest"/>

    <ImageButton
        android:id="@+id/paypal_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/paypal_logo"
        app:layout_constraintTop_toBottomOf="@+id/kofi_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>